--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "eat-da-burger",
-  "main": "index.js",
+  "main": "sevrer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
